[package]
name = "westworld"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11", default-features = false, features = ["bevy_winit"] }
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.11", default-features = false, features = ["webgl2"] }
